fixed spacing in nav and footer of product page

--- a/contact.css
+++ b/contact.css
@@ -164,6 +164,5 @@ footer{
   color: black;
   font-family:'raleway' ;
   font-size: 1.5vw;
-  font-weight:330;
+  font-weight:bolder;
   }
-
